completed all clock functions and style. want to incorporate number coordinate algo into positionNumbers function.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+        
     </head>
     <body>
-        <div class="clock-border1">
+        <div class="clock-border1" id="clock-container">
         <div class="clock-border2">
         <div class="clock" id="clock-face">
-            <div id="clock-numbers"></div>
-            <div class="second-hand"></div>
-            <div class="minute-hand"></div>
-            <div class="hour-hand"></div>
+            <div id="clock-numbers-container"></div>
+            <div id="middle-point"></div>
+            <div id="middle-highlight"></div>
+            <div id="second-hand"></div>
+            <div id="minute-hand"></div>
+            <div id="hour-hand"></div>
+            <div id="signature">Designed by Chris Clynes</div>
         </div>
         </div>
         </div>
+        
         <script type="text/javascript" src="./index.js"></script>
     </body>
 </html>
