--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
         <div class="clock-border1" id="clock-container">
             <div class="clock-border2">
                 <div class="clock" id="clock-face">
-                    <div id="clock-numbers-container"></div>
+                    <div id="clock-numbers-container">
+                        <div class="clock-numbers" id="clock-number1">1</div>
+                        <div class="clock-numbers" id="clock-number2">2</div>
+                        <div class="clock-numbers" id="clock-number3">3</div>
+                        <div class="clock-numbers" id="clock-number4">4</div>
+                        <div class="clock-numbers" id="clock-number5">5</div>
+                        <div class="clock-numbers" id="clock-number5">5</div>
+                        <div class="clock-numbers" id="clock-number6">6</div>
+                        <div class="clock-numbers" id="clock-number7">7</div>
+                        <div class="clock-numbers" id="clock-number8">8</div>
+                        <div class="clock-numbers" id="clock-number9">9</div>
+                        <div class="clock-numbers" id="clock-number10">10</div>
+                        <div class="clock-numbers" id="clock-number11">11</div>
+                        <div class="clock-numbers" id="clock-number12">12</div>
+                      </div>
                     <div id="middle-point"></div>
                     <div id="middle-highlight"></div>
                     <div id="second-hand"></div>
